# FluxStudio

./: .dockerignore  .env.docker.example  .env.example  .env.local.example  .env.messaging.example  .env.phase1.example  .env.production.example  .env.production.new  .env.production.template  .gitignore  .lighthouserc.js  COLLABORATION_SERVICE_ENABLED.md  COLLABORATIVE_DOCS_BACKEND_COMPLETE.md  CONTRIBUTING.md  DASHBOARD_IMPROVEMENTS_GUIDE.md  DATABASE_ENABLED.md  DEMO_COLLABORATIVE_EDITOR.md  DEPLOYMENT_BLOCKED_STATUS.md  DEPLOYMENT_DIAGNOSIS.md  DEPLOYMENT_FAILED_ANALYSIS.md  DEPLOYMENT_FIX_APPLIED.md  DEPLOYMENT_IN_PROGRESS.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_STATUS_FINAL.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUCCESS_PATH.md  DEPLOY_PHASE_4A_QUICKSTART.md  Deployment triggered at: $(date '+%Y-%m-%d %H:%M:%S')  Dockerfile  Dockerfile.collaboration  Dockerfile.frontend  Dockerfile.messaging  Dockerfile.unified-backend  ESLINT_FIXES_COMPLETE.md  FINAL_DEPLOYMENT_INSTRUCTIONS.md  FLOW_STATE_VISION_BRIEF.md  FLUXPRINT_PHASE2_TESTING.md  HLS_DEPLOYMENT_FINAL_SESSION_REPORT.md  HLS_DEPLOYMENT_READY.md  HLS_DEPLOYMENT_SESSION_SUMMARY.md  (+114 more)
.claude/: CLAUDE.md  agents.md  settings.json
.do/: app-docker.yaml  app.yaml
.fluxstudio/: README.md  flux-agent
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md
apps/desktop/src-tauri/src/: lib.rs  main.rs
automation/: pyproject.toml
automation/src/fluxstudio_agents/: __init__.py  mcp_server.py  scaffold.py  test_gen.py
(+2737 files in other folders)
