[project]
name = "fluxstudio-agents"
version = "0.1.0"
description = "FluxStudio AI automation agents powered by Claude Code SDK"
requires-python = ">=3.12"
dependencies = [
    "claude-code-sdk>=0.1.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fluxstudio_agents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
